--- a/styles.css
+++ b/styles.css
@@ -3,24 +3,26 @@
 @import url("styles/carrossel.css");
 @import url("styles/topicos.css");
 @import url("styles/contato.css");
-@import url("styles/rodapé.css");
+@import url("styles/rodape.css");
 
-:root {
-    --cor-de-fundo: #EBECEE;
-    --branco: #FFFFFF;
-    --laranja: #EB9B00;
-    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+:root{
+    --cor-de-fundo: black;
+    --cor-de-cabeçalho: rgb(71, 71, 71);
+    --cor-de-texto-principal: white;
+    --cor-menu: #16c398;
+    --cor-menu-itens: orange;
     --fonte-principal: "Poppins";
-    --azul: #002F52;
-    --fonte-secundario: "Josefin Sans";
-    --preto: #000000;
-    --cinza: #474646;
-    --cinza-claro: #858585;
+    font-family: 'Poppins', sans-serif;
 }
 
-body {
+body{
     background-color: var(--cor-de-fundo);
     font-family: var(--fonte-principal);
     font-size: 16px;
     font-weight: 400;
+}
+
+h1{
+    background-color: var(--cor-de-cabeçalho);
+    color: var(--cor-de-texto-principal);
 }
